baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__parser_statements__01_lexer__while_loop.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "simple_while_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "10"
RParen ")"
LBrace "{"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "i"
Semicolon ";"
RBrace "}"
Function "function"
Word "nested_while_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "10"
RParen ")"
LBrace "{"
Let "let"
Word "j"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "j"
Less "<"
IntegerLiteral "10"
RParen ")"
LBrace "{"
Word "j"
Equals "="
Word "j"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "i"
Semicolon ";"
RBrace "}"
